--- a/style.css
+++ b/style.css
@@ -15,3 +15,16 @@ h1 {
 h2 {
   color: black;
 }
+
+@media (min-width: 992px) {
+  .img-device {
+    width: 100%;
+    height: 600px;
+  }
+}
+@media (max-width: 992px) {
+  .img-device {
+    width: 100%;
+    height: 300px;
+  }
+}
